# [[file:sbfiles.note::ad76bf47][ad76bf47]]
[package]
name = "sbfiles"
version = "0.0.4"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
gut = {version="0.4", package="gchemol-gut"}
flate2 = "1"
tar = "0.4"
base64 = "0.13"
pathdiff = "0.2"

[dev-dependencies]
duct = "0.13"
tempfile = "3"

[workspace]

# [dependencies.copypasta-ext]
# version = "0.3"
# default-features = false
# features = ["osc52"]
# ad76bf47 ends here
